--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Mage"
-description              : "Mage & Niebelungen"
-repository               : "arctanxarc/arctanx"
+title                    : "Kernel"
+description              : "Kernel's Personal Homepage"
+repository               : "kernel-14/kernel-14.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Ruichuan An"
-  avatar           : "images/arc_arc.png"
-  bio              : "XJTU & PKU"
-  location         : 
+  name             : "Kernel"
+  avatar           : "images/icon.png"
+  bio              : "[Your Institution]"
+  location         : "[Your Location]"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=R5iSLPQAAAAJ&hl=zh-CN"
-  email            : "arctanxarc@gmail.com"
+  googlescholar    : "[Your Google Scholar URL]"
+  email            : "[your-email@example.com]"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -37,13 +37,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "arctanxarc"
+  github           : "kernel-14"
   google_plus      :
   keybase          :
   instagram        : #
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "rongyu-zhang-2b94a82a5"
+  linkedin         : "[your-linkedin]"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "arctanxarc"
+  twitter          : "[your-twitter]"
   vine             :
   weibo            :
   xing             :
